--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "formik": "^2.4.6",
     "hamburger-react": "^2.5.1",
     "mdb-react-ui-kit": "^8.0.0",
@@ -13,6 +14,7 @@
     "react-bootstrap": "^2.10.2",
     "react-burger-menu": "^3.0.9",
     "react-collapse": "^5.1.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
