--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-scroll-to-top": "^3.0.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.11.0",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
