--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# REACT_APP_API_URL_GRACELAB="http://localhost:8000"
-REACT_APP_API_URL_GRACELAB="https://gracelab-backend.onrender.com"
+REACT_APP_API_URL_GRACELAB="http://localhost:8000"
+# REACT_APP_API_URL_GRACELAB="https://gracelab-backend.onrender.com"
 REACT_APP_DEFAULTAUTH=fake
 GENERATE_SOURCEMAP=false
