11/06/24 update and binding

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# REACT_APP_API_URL_GRACELAB="http://localhost:8000"
-REACT_APP_API_URL_GRACELAB="http://ServerGracelab.barodaweb.in"
+REACT_APP_API_URL_GRACELAB="http://localhost:8000"
+# REACT_APP_API_URL_GRACELAB="http://ServerGracelab.barodaweb.in"
 REACT_APP_DEFAULTAUTH=fake
 GENERATE_SOURCEMAP=false
