--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-burger-menu": "^3.0.9",
     "react-collapse": "^5.1.1",
     "react-countup": "^6.5.3",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
