--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scroll-to-top": "^3.0.0",
     "react-slick": "^0.30.2",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.11.0",
     "sweetalert2-react-content": "^5.0.7",
