--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-preloaders": "^3.0.3",
+    "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^3.0.0",
+    "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.30.2",
+    "react-star-ratings": "^2.3.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
