--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.11.0",
     "sweetalert2-react-content": "^5.0.7",
+    "swiper": "^11.1.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
