--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sweetalert2": "^11.11.0",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.4",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
