--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# REACT_APP_API_URL_GRACELAB="http://localhost:8021"
-REACT_APP_API_URL_GRACELAB="https://servergracelab.barodaweb.in"
+REACT_APP_API_URL_GRACELAB="http://localhost:8021"
+# REACT_APP_API_URL_GRACELAB="https://servergracelab.barodaweb.in"
 REACT_APP_DEFAULTAUTH=fake
 GENERATE_SOURCEMAP=false    
