--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-preloaders": "^3.0.3",
     "react-rating-stars-component": "^2.2.0",
+    "react-responsive": "^10.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
