--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-star-ratings": "^2.3.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
+    "reactstrap": "^9.2.2",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.11.0",
     "sweetalert2-react-content": "^5.0.7",
