--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-image-gallery": "^1.3.0",
+    "react-image-lightbox": "^5.1.4",
     "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
     "react-preloaders": "^3.0.3",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive": "^10.0.0",
