--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-image-lightbox": "^5.1.4",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
+    "react-modal-video": "^2.0.2",
     "react-preloaders": "^3.0.3",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive": "^10.0.0",
@@ -35,6 +36,7 @@
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
+    "resolve-url-loader": "^5.0.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.11.0",
     "sweetalert2-react-content": "^5.0.7",
